--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.62.1",
     "styled-components": "^6.0.2"
   },
